--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
 
     <dependencies>
         <!-- #Your dependencies -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0-beta3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
